# birth

./: .gitignore  README.md  pyproject.toml  reset.sh  run.sh
birth/: __init__.py  config.py  main.py
birth/agents/: __init__.py  agent.py  memory.py  persona.py  sentiment.py
birth/core/: __init__.py  clock.py  engine.py  events.py
birth/creation/: __init__.py
birth/integrations/: __init__.py  ollama.py  stable_diffusion.py
birth/observation/: __init__.py  logger.py  metrics.py  snapshots.py
birth/storage/: __init__.py  database.py  models.py  repository.py
birth/world/: __init__.py  canvas.py  challenges.py  commons.py  drops.py  gallery.py
data/: birth.db
data/personas 2/: 0170ab21-7c7e-4e2f-9ee9-a83a82087954.json  0d380846-0d7d-45b8-ab26-adeb92fa0114.json  0d54a0ca-753e-44d0-8aac-158ef3b296bd.json  33c51394-cc67-406f-9377-c94d8d7fbb1a.json  5d5d1450-3763-4897-b772-b0bad670cfd2.json  65ca3988-4c66-400f-a777-6ce67f69bcb7.json  6fd6ff0c-9b9c-49fa-98dc-825158658d8c.json  7f3a5a02-c8e5-4f05-b2cc-e01c2ca27d62.json  85c74baf-76b7-4c39-ad40-96e306adfb02.json  c64c3465-96b7-449e-b242-2f829c9b5271.json  cee418f2-4d2c-4510-a93b-040bc7a6789b.json  d447135f-a826-4876-988f-5310108fbcc7.json
data/personas copy/: 07fd5983-1fc4-426c-9453-80ead117c3d5.json  15e817eb-0bdc-4b97-a1fa-918ea6d75a4d.json  1c84d6f1-ec65-492f-948f-5f131342a4ed.json  33d19fa0-0bd9-4914-8f6b-b22179dfb72a.json  4a5ab2f5-df47-4d99-93ee-53f5ae36ec04.json  4c4e6594-f011-43b6-b82a-945d461078f8.json  8fafb49b-5e8c-4197-8731-ff96ba57d4cb.json  sample_elder.json  (+2 more)
tests/: __init__.py
(+1176 files in other folders)
